--- a/public/editmember.html
+++ b/public/editmember.html
@@ -118,28 +118,51 @@
             </nav>
 
 
+
+            <form id="member-frm-id" class="form-inline">
+                <div class="form-group mx-sm-3 mb-2">
+                    <label for="inpid">Member ID</label>
+                    <input type="text" class="form-control" id="inpid" placeholder="Member ID">
+                </div>
+                <button type="submit" class="btn btn-primary mb-2">Fetch Member details</button>                
+              </form>
+
+
+            <!-- <form id="member-frm-id">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="inpid">Member ID</label>
+                        <input type="text" class="form-control" id="inpid" placeholder="Member ID">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <button type="submit" class="btn btn-primary">Fetch Member details</button>
+                    </div>
+                </div>
+            </form> -->
+
+
             <form id="member-frm">
                 <div class="form-row">
                     <div class="form-group col-md-6">
                         <label for="fname">First Name</label>
-                        <input type="text" class="form-control" id="fname" placeholder="Member First Name">
+                        <input type="text" class="form-control" id="fname">
                     </div>
                     <div class="form-group col-md-6">
                         <label for="lname">Last Name</label>
-                        <input type="text" class="form-control" id="lname" placeholder="Member Last Name">
+                        <input type="text" class="form-control" id="lname">
                     </div>
                 </div>
                 <div class="form-group">
                     <label for="inputAddress1">Address Line 1</label>
-                    <input type="text" class="form-control" id="inputAddress1" placeholder="1234 Main St">
+                    <input type="text" class="form-control" id="inputAddress1">
                 </div>
                 <div class="form-group">
                     <label for="inputAddress2">Address Line 2</label>
-                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
+                    <input type="text" class="form-control" id="inputAddress2">
                 </div>
                 <div class="form-group">
                     <label for="inputAddress3">Address Line 3</label>
-                    <input type="text" class="form-control" id="inputAddress3" placeholder="Other address info">
+                    <input type="text" class="form-control" id="inputAddress3">
                 </div>
                 <div class="form-row">
                     <div class="form-group col-md-6">
@@ -163,22 +186,22 @@
 
                 <div class="form-group">
                     <label for="inputdob">Date of Birth</label>
-                    <input type="date" class="form-control" id="inputdob" placeholder="Member Date of Birth">
+                    <input type="date" class="form-control" id="inputdob">
                 </div>
 
                 <div class="form-group">
                     <label for="inputDoj">Date of Joining</label>
-                    <input type="date" class="form-control" id="inputDoj" placeholder="Date of Joining">
+                    <input type="date" class="form-control" id="inputDoj">
                 </div>
 
                 <div class="form-group">
                     <label for="inputphone">Phone Number</label>
-                    <input type="text" class="form-control" id="inputphone" placeholder="Phone number">
+                    <input type="text" class="form-control" id="inputphone">
                 </div>
 
                 <div class="form-group">
                     <label for="inputemail">Email</label>
-                    <input type="text" class="form-control" id="inputemail" placeholder="Member Email id">
+                    <input type="text" class="form-control" id="inputemail">
                 </div>
 
                 <button type="submit" class="btn btn-primary">Add Member</button>
@@ -207,7 +230,7 @@
         });  
     </script>
 
-    <script src="js/newmember.js" type="text/javascript"></script>
+    <script src="js/editmember.js" type="text/javascript"></script>
 
 </body>
 
