Final integrated code

--- a/public/blank.html
+++ b/public/blank.html
@@ -76,16 +76,10 @@
           <a href="#reportsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
             <i class="fas fa-file-download"></i> Reports</a>
           <ul class="collapse list-unstyled" id="reportsSubmenu">
-            <li>
-              <a href="/report1">List1</a>
-            </li>
-            <li>
-              <a href="/report2">List2</a>
-            </li>
-            <li>
-              <a href="/report3">List3</a>
-            </li>
-          </ul>
+              <li>
+                  <a href="/report1">Manage Delinquency</a>
+                </li>
+              </ul>
         </li>
       </ul>
 
