--- a/public/editmember.html
+++ b/public/editmember.html
@@ -77,13 +77,7 @@
                         <i class="fas fa-file-download"></i> Reports</a>
                     <ul class="collapse list-unstyled" id="reportsSubmenu">
                         <li>
-                            <a href="/report1">List1</a>
-                        </li>
-                        <li>
-                            <a href="/report2">List2</a>
-                        </li>
-                        <li>
-                            <a href="/report3">List3</a>
+                            <a href="/report1">Manage Delinquency</a>
                         </li>
                     </ul>
                 </li>
@@ -107,10 +101,10 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-                        <ul class="navbar-nav ml-auto">
-                                <h3>Update Member details</h3> 
-                            </ul>
-        
+                    <ul class="navbar-nav ml-auto">
+                        <h3>Update Member details</h3>
+                    </ul>
+
                     <ul class="navbar-nav ml-auto">
                         <li class="nav-item active">
                             <a class="nav-link" href="/home">Home
