--- a/public/addrental.html
+++ b/public/addrental.html
@@ -101,9 +101,8 @@
                     <span class="navbar-toggler-icon"></span>
                 </button>
                 <div class="collapse navbar-collapse" id="navbarNav">
-
                     <ul class="navbar-nav ml-auto">
-                        <h3>Add New Member</h3>
+                        <h3>Add New Rental</h3>
                     </ul>
 
                     <ul class="navbar-nav ml-auto">
@@ -117,101 +116,118 @@
             </nav>
 
 
-            <form id="member-frm">
+
+            <form id="member-frm-id" class="form-inline">
                 <div class="form-row">
-                    <div class="form-group col-md-6">
+                    <div class="form-group mx-sm-3 mb-2">
+                        <label for="inpid">Member ID</label>
+                        <input type="text" class="form-control" id="inpid" placeholder="Member ID">
+                    </div>
+                    <button type="submit" class="btn btn-primary mb-2">Fetch Member details</button>
+                    <div class="form-group mx-sm-2">
                         <label for="fname">First Name</label>
-                        <input type="text" class="form-control" id="fname" placeholder="Member First Name">
+                        <input type="text" readonly class="form-control" id="fname">
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group mx-sm-2">
                         <label for="lname">Last Name</label>
-                        <input type="text" class="form-control" id="lname" placeholder="Member Last Name">
+                        <input type="text" readonly class="form-control" id="lname">
                     </div>
-                </div>
-                <div class="form-group">
-                    <label for="inputAddress1">Address Line 1</label>
-                    <input type="text" class="form-control" id="inputAddress1" placeholder="1234 Main St">
-                </div>
-                <div class="form-group">
-                    <label for="inputAddress2">Address Line 2</label>
-                    <input type="text" class="form-control" id="inputAddress2" placeholder="Apartment, studio, or floor">
-                </div>
-                <div class="form-group">
-                    <label for="inputAddress3">Address Line 3</label>
-                    <input type="text" class="form-control" id="inputAddress3" placeholder="Other address info">
-                </div>
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputCity">City</label>
-                        <input type="text" class="form-control" id="inputCity">
-                    </div>
-                    <div class="form-group col-md-4">
-                        <label for="inputState">State</label>
-                        <select id="inputState" class="form-control">
-                            <option selected>Choose...</option>
-                            <option>CA</option>
-                            <option>AZ</option>
-                            <option>UT</option>
+                    <div class="form-group mx-sm-2">
+                        <label for="status">Status</label>
+                        <select id="status" readonly class="form-control">
+                            <option>ACTIVE</option>
+                            <option>INACTIVE</option>
+                            <option>HOLD</option>
+                            <option>DELINQUENT</option>
                         </select>
                     </div>
-                    <div class="form-group col-md-2">
-                        <label for="inputZip">Zip</label>
-                        <input type="text" class="form-control" id="inputZip">
+                    <div class="form-group mx-sm-3 mb-2">
+                        <label for="inputRentalDate">Rental Date</label>
+                        <input type="date" readonly class="form-control" id="inputRentalDate">
                     </div>
-                </div>
-
-                <div class="form-row">
-                    <div class="form-group col-md-6">
-                        <label for="inputdob">Date of Birth</label>
-                        <input type="date" class="form-control" id="inputdob" placeholder="Member Date of Birth">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="inputDoj">Date of Joining</label>
-                        <input type="date" class="form-control" id="inputDoj" placeholder="Date of Joining">
-                    </div>
-                </div>
-
-                <div class="form-row">
-
-                    <div class="form-group col-md-6">
-                        <label for="inputphone">Phone Number</label>
-                        <input type="text" class="form-control" id="inputphone" placeholder="Phone number">
-                    </div>
-
-                    <div class="form-group col-md-6">
-                        <label for="inputemail">Email</label>
-                        <input type="text" class="form-control" id="inputemail" placeholder="Member Email id">
-                    </div>
-                </div>
-
-                <button type="submit" class="btn btn-primary">Add Member</button>
             </form>
+
+
+
+
+            <form id="member-frm">
+                <!-- <div class="form-row">
+                    <div class="form-group col-md-4">
+                        <label for="fname">First Name</label>
+                        <input type="text" readonly class="form-control" id="fname">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="lname">Last Name</label>
+                        <input type="text" readonly class="form-control" id="lname">
+                    </div>
+                    <div class="form-group col-md-4">
+                        <label for="status">Status</label>
+                        <select id="status" readonly class="form-control">
+                            <option>ACTIVE</option>
+                            <option>INACTIVE</option>
+                            <option>HOLD</option>
+                            <option>DELINQUENT</option>
+                        </select>
+                    </div>
+                </div> -->
+
+
+                <div class="tbl-container">
+                    <div id="booklist-table">
+
+                    </div>
+                </div>
+
+                <div id="selected-book-container">
+
+                    <table class="table table-primary table-bordered table-condensed">
+                        <thead class="thead-dark">
+                            <tr>
+                                <th scope="col">Book ID</th>
+                                <th scope="col">Title</th>
+                                <th scope="col">Author</th>
+                                <th scope="col">Return Due Date</th>
+                            </tr>
+                        </thead>
+                        <tbody id="selected-books-table">
+                        </tbody>
+                    </table>
+
+                </div>
+
+                <button type="button" id="addRentalBtn" class="btn btn-primary mb-2">Add member rental</button>
+
+
+
+            </form>
+            </div>
+
         </div>
 
-    </div>
 
+        <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+        <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+            crossorigin="anonymous"></script>
+        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+            crossorigin="anonymous"></script>
+        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+            crossorigin="anonymous"></script>
+        <script src="https://code.jquery.com/jquery.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
 
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-        crossorigin="anonymous"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-        crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
-    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
+        <link href="https://unpkg.com/tabulator-tables@4.1.2/dist/css/tabulator.min.css" rel="stylesheet">
+        <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.1.2/dist/js/tabulator.min.js"></script>
+        <link rel="stylesheet" href="css/tabulator_modern.min.css">
 
+        <script>
+            $(document).ready(function () {
+                $('#sidebarCollapse').on('click', function () {
+                    $('#sidebar').toggleClass('active');
+                });
+            });  
+        </script>
 
-    <script>
-        $(document).ready(function () {
-            $('#sidebarCollapse').on('click', function () {
-                $('#sidebar').toggleClass('active');
-            });
-        });  
-    </script>
-
-    <script src="js/newmember.js" type="text/javascript"></script>
+        <script src="js/addrental.js" type="text/javascript"></script>
 
 </body>
 
