--- a/public/editbook.html
+++ b/public/editbook.html
@@ -12,6 +12,16 @@
   <link rel="stylesheet" href="css/styles.css">
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
     crossorigin="anonymous">
+  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
+  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
+    crossorigin="anonymous"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+    crossorigin="anonymous"></script>
+  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+    crossorigin="anonymous"></script>
+  <script src="https://code.jquery.com/jquery.js"></script>
+
+  <!-- <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script> -->
   <title>Library Management System</title>
 </head>
 
@@ -102,7 +112,7 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ml-auto">
-            <h3>List Members</h3>
+            <h3> Edit Book</h3>
           </ul>
 
           <ul class="navbar-nav ml-auto">
@@ -115,49 +125,60 @@
         </div>
       </nav>
 
-
-      <div class="tbl-container">
-        <div id="member-table">
-
+      <form id="book-frm-id" class="form-inline">
+        <div class="form-group mx-sm-3 mb-2">
+          <label for="book id">Book ID</label>
+          <input type="text" class="form-control" id="fid" placeholder="Book ID">
         </div>
+        <button type="submit" class="btn btn-primary mb-2">Fetch Book details</button>
+      </form>
+
+
+      <form id="book-frm">
+        <div class="form-row">
+          <div class="form-group col-md-4">
+            <label for="title">Book Title</label>
+            <input type="text" class="form-control" id="fbooktitle">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="author">Book Author</label>
+            <input type="text" class="form-control" id="fbookauthor">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="status">Status</label>
+            <select id="status" class="form-control">
+              <option>ACTIVE</option>
+              <option>LOST</option>
+              <option>DAMAGE</option>
+            </select>
+          </div>
+          <div class="form-group col-md-6">
+            <label for="summary">Book Summary</label>
+            <input required type="text" class="form-control" id="fbooksummary" placeholder="Book Summary">
+          </div>
+          <div class="form-group col-md-4">
+            <label for="location">Rack Location</label>
+            <input type="text" class="form-control" id="fracklocation">
+          </div>
+          <div class="form-group col-md-2">
+            <label for="edition">Edition Number</label>
+            <input type="text" class="form-control" id="fedition">
+          </div>
+
+          <button type="submit" class="btn btn-primary">Update Book</button>
+      </form>
       </div>
-
-
     </div>
-  </div>
 
+    <script>
+      $(document).ready(function () {
+        $('#sidebarCollapse').on('click', function () {
+          $('#sidebar').toggleClass('active');
+        });
+      });  
+    </script>
 
-
-
-
-
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-  <script src="https://code.jquery.com/jquery.js"></script>
-
-
-  <script>
-    $(document).ready(function () {
-      $('#sidebarCollapse').on('click', function () {
-        $('#sidebar').toggleClass('active');
-      });
-    });  
-  </script>
-
-  <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
-  <link href="https://unpkg.com/tabulator-tables@4.1.2/dist/css/tabulator.min.css" rel="stylesheet">
-  <script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.1.2/dist/js/tabulator.min.js"></script>
-  <link rel="stylesheet" href="css/tabulator_modern.min.css">
-
-  <script src="js/listmembers.js" type="text/javascript"></script>
-
-
-
+    <script src="js/editbook.js" type="text/javascript"></script>
 
 </body>
 
