--- a/public/listdelinquency.html
+++ b/public/listdelinquency.html
@@ -2,196 +2,286 @@
 <html lang="en">
 
 <head>
-  <!-- Required meta tags -->
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 
-  <!-- Bootstrap CSS -->
-  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
-    crossorigin="anonymous">
-  <link rel="stylesheet" href="css/styles.css">
-  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
-    crossorigin="anonymous">
-  <title>Library Management System</title>
+    <!-- Bootstrap CSS -->
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO"
+        crossorigin="anonymous">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.css" />
+    <link rel="stylesheet" href="css/styles.css">
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU"
+        crossorigin="anonymous">
+    <title>Library Management System</title>
 </head>
 
 <body>
 
-  <div class="wrapper">
-    <nav id="sidebar">
-      <div class="sidebar-header">
-        <h3>Library Management</h3>
-      </div>
+    <div class="wrapper">
+        <nav id="sidebar">
+            <div class="sidebar-header">
+                <h3>Library Management</h3>
+            </div>
 
-      <ul class="list-unstyled components">
-        <li class="active">
-          <a href="#memberSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-            <i class="fas fa-book-reader"></i> Memeber Maint.</a>
-          <ul class="collapse list-unstyled" id="memberSubmenu">
-            <li>
-              <a href="/newmember">Add New Member</a>
-            </li>
-            <li>
-              <a href="/editmember">Edit Member</a>
-            </li>
-            <li>
-              <a href="/listmember">List Members</a>
-            </li>
-          </ul>
-        </li>
+            <ul class="list-unstyled components">
+                <li class="active">
+                    <a href="#memberSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-book-reader"></i> Memeber Maint.</a>
+                    <ul class="collapse list-unstyled" id="memberSubmenu">
+                        <li>
+                            <a href="/newmember">Add New Member</a>
+                        </li>
+                        <li>
+                            <a href="/editmember">Edit Member</a>
+                        </li>
+                        <li>
+                            <a href="/listmember">List Members</a>
+                        </li>
+                    </ul>
+                </li>
 
-        <li>
-          <a href="#bookSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-            <i class="fas fa-book"></i> Book Maintenance</a>
-          <ul class="collapse list-unstyled" id="bookSubmenu">
-            <li>
-              <a href="/addbook">Add Book inventory</a>
-            </li>
-            <li>
-              <a href="/editbook">Update Book info</a>
-            </li>
-            <li>
-              <a href="/listbook">List Books</a>
-            </li>
-          </ul>
-        </li>
+                <li>
+                    <a href="#bookSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-book"></i> Book Maintenance</a>
+                    <ul class="collapse list-unstyled" id="bookSubmenu">
+                        <li>
+                            <a href="/addbook">Add Book inventory</a>
+                        </li>
+                        <li>
+                            <a href="/editbook">Update Book info</a>
+                        </li>
+                        <li>
+                            <a href="/listbook">List Books</a>
+                        </li>
+                    </ul>
+                </li>
 
-        <li>
-          <a href="#rentalSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-            <i class="fas fa-reply"></i> Rental Maintenace</a>
-          <ul class="collapse list-unstyled" id="rentalSubmenu">
-            <li>
-              <a href="/addrental">Add new rental</a>
-            </li>
-            <li>
-              <a href="/updaterental">Update rental</a>
-            </li>
-            <li>
-              <a href="/listrental">List Rental details</a>
-            </li>
-          </ul>
-        </li>
+                <li>
+                    <a href="#rentalSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-reply"></i> Rental Maintenace</a>
+                    <ul class="collapse list-unstyled" id="rentalSubmenu">
+                        <li>
+                            <a href="/addrental">Add new rental</a>
+                        </li>
+                        <li>
+                            <a href="/updaterental">Update rental</a>
+                        </li>
+                        <li>
+                            <a href="/listrental">List Rental details</a>
+                        </li>
+                    </ul>
+                </li>
 
-        <li>
-          <a href="#reportsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-            <i class="fas fa-file-download"></i> Reports</a>
-          <ul class="collapse list-unstyled" id="reportsSubmenu">
-            <li>
-              <a href="/report1">List1</a>
-            </li>
-            <li>
-              <a href="/report2">List2</a>
-            </li>
-            <li>
-              <a href="/report3">List3</a>
-            </li>
-          </ul>
-        </li>
-      </ul>
-
-    </nav>
-
-    <div class="content topnav">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-
-        <button type="button" id="sidebarCollapse" class="btn btn-info">
-          <i class="fa fa-align-justify"></i>
-          <span>
-            <i class="fas fa-caret-left"></i>
-          </span>
-        </button>
-
-        <!--<a class="navbar-brand" href="#">Navbar</a> -->
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
-          aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNav">
-            <ul class="navbar-nav ml-auto">
-                <h3>List Members</h3> 
+                <li>
+                    <a href="#reportsSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
+                        <i class="fas fa-file-download"></i> Reports</a>
+                    <ul class="collapse list-unstyled" id="reportsSubmenu">
+                        <li>
+                            <a href="/report1">Manage Delinquency</a>
+                        </li>
+                    </ul>
+                </li>
             </ul>
 
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active">
-              <a class="nav-link" href="/home">Home
-                <span class="sr-only">(current)</span>
-              </a>
-            </li>
-          </ul>
+        </nav>
+
+        <div class="content topnav">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+
+                <button type="button" id="sidebarCollapse" class="btn btn-info">
+                    <i class="fa fa-align-justify"></i>
+                    <span>
+                        <i class="fas fa-caret-left"></i>
+                    </span>
+                </button>
+
+                <!--<a class="navbar-brand" href="#">Navbar</a> -->
+                <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ml-auto">
+                        <h3>List Members</h3>
+                    </ul>
+
+                    <ul class="navbar-nav ml-auto">
+                        <li class="nav-item active">
+                            <a class="nav-link" href="/home">Home
+                                <span class="sr-only">(current)</span>
+                            </a>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+
+
+            <!-- <form id="member-frm">
+                <div class="form-row">
+                    <div class="form-group col-md-6">
+                        <label for="fname">First Name</label>
+                        <input type="text" readonly class="form-control" id="fname">
+                    </div>
+                    <div class="form-group col-md-6">
+                        <label for="lname">Last Name</label>
+                        <input type="text" readonly class="form-control" id="lname">
+                    </div>
+                </div>
+                <div class="form-group col-md-6">
+                    <label for="address1">Address</label>
+                    <input type="text" readonly class="form-control" id="address1">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" readonly class="form-control" id="address2">
+                </div>
+                <div class="form-group col-md-6">
+                    <input type="text" readonly class="form-control" id="city">
+                </div>
+
+            </form> -->
+
+            <form id="member-frm">
+                <div class="form-group row">
+                    <label for="fname" class="col-sm-2 col-form-label">First Name</label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control-plaintext" id="fname">
+                    </div>
+                    <label for="lname" class="col-sm-2 col-form-label">Last Name</label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control-plaintext" id="lname">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="address1" class="col-sm-2 col-form-label">Adderess</label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control-plaintext" id="address1">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="address2" class="col-sm-2 col-form-label"></label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control-plaintext" id="address2">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="city" class="col-sm-2 col-form-label">City, State, Zip</label>
+                    <div class="col-sm-2">
+                        <input type="text" readonly class="form-control-plaintext" id="city">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" readonly class="form-control-plaintext" id="state">
+                    </div>
+                    <div class="col-sm-2">
+                        <input type="text" readonly class="form-control-plaintext" id="zip">
+                    </div>
+                </div>
+
+                <div class="form-group row">
+                    <label for="emailid" class="col-sm-2 col-form-label">Email ID</label>
+                    <div class="col-sm-4">
+                        <input type="text" readonly class="form-control-plaintext" id="emailid">
+                    </div>
+                </div>
+                <button id="corsBtn" type="button" class="btn btn-info">Email Correspondence</button>
+
+            </form>
+
+
+
+            <table class="table table-bordered table-condensed">
+                <thead class="thead-dark">
+                    <tr>
+                        <th scope="col">Txn ID</th>
+                        <th scope="col">First</th>
+                        <th scope="col">Last</th>
+                        <th scope="col">Book</th>
+                        <th scope="col">Borrowed Date</th>
+                        <th scope="col">Return Due Date</th>
+                        <th scope="col">Number of Days</th>
+                        <th scope="col">Fine Amount</th>
+                    </tr>
+                </thead>
+                <tbody id="member-del-detail">
+                </tbody>
+            </table>
+
+            <div class="container">
+                <!-- Modal -->
+                <div class="wrapper animated bounceInLeft">
+
+                    <div class="modal fade" id="myModal" role="dialog">
+                        <div class="model-container modal-dialog">
+
+                            <!-- Modal content-->
+                            <div class="model-wrapper modal-content">
+                                <div class="modal-header">
+                                    <h4 class="modal-title">Email preview</h4>
+                                </div>
+                                <div class="modal-body">
+                                    <div class="divider"></div>
+                                    <div id="cmsgbody">
+
+                                    </div>
+                                    <!-- <p class="full">
+                                    <button id="sendEmail" class = "btn btn-danger" type="submit">Send email</button>
+                                </p> -->
+                                </div>
+                                <div class="modal-footer">
+                                    <div class="col-sm-6">
+                                        <h2>
+                                            <input type="emailMsg" readonly class="form-control-plaintext" id="emailMsg">
+                                        </h2>
+                                    </div>
+                                    <button id="sendEmail" class="btn btn-danger" type="submit">Send email</button>
+                                    <button id="modelclose" type="button" class="btn btn-primary" data-dismiss="modal">Close</button>
+                                </div>
+                            </div>
+
+                        </div>
+                    </div>
+
+                </div>
+
+
+
+
+
+            </div>
+
         </div>
-      </nav>
 
-  <!-- <table class="table table-bordered table-condensed">
-    <thead class="thead-dark">
-      <tr>
-        <th scope="col">#</th>
-        <th scope="col">First</th>
-        <th scope="col">Last</th>
-        <th scope="col">Date of Birth</th>
-      </tr>
-    </thead>
-    <tbody>
-      <tr>
-        <th scope="row">1</th>
-        <td>Mark</td>
-        <td>Otto</td>
-        <td>@mdo</td>
-      </tr>
-      <tr>
-        <th scope="row">2</th>
-        <td>Jacob</td>
-        <td>Thornton</td>
-        <td>@fat</td>
-      </tr>
-      <tr>
-        <th scope="row">3</th>
-        <td>Larry</td>
-        <td>the Bird</td>
-        <td>@twitter</td>
-      </tr>
-    </tbody>
-  </table> -->
-
-  <div class="tbl-container">
-      <div id="member-table">
-
-        </div>
-  </div>
-
-
-</div>
-</div>
+    </div>
 
 
 
+    <!-- <script src="https://code.jquery.com/jquery.js"></script> -->
 
 
+    <script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
+    <!-- <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script> -->
 
-  <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-  <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-    crossorigin="anonymous"></script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
-    crossorigin="anonymous"></script>
-  <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
-    crossorigin="anonymous"></script>
-    <script src="https://code.jquery.com/jquery.js"></script>
+    <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49"
+        crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy"
+        crossorigin="anonymous"></script>
+    <script src="js/listdelinquency.js" type="text/javascript"></script>
 
 
-  <script>
-    $(document).ready(function () {
-      $('#sidebarCollapse').on('click', function () {
-        $('#sidebar').toggleClass('active');
-      });
-    });  
-  </script>
-
-<script src="//cdnjs.cloudflare.com/ajax/libs/moment.js/2.7.0/moment.js"></script>
-<link href="https://unpkg.com/tabulator-tables@4.1.2/dist/css/tabulator.min.css" rel="stylesheet">
-<script type="text/javascript" src="https://unpkg.com/tabulator-tables@4.1.2/dist/js/tabulator.min.js"></script>
-<link rel="stylesheet" href="css/tabulator_modern.min.css" >
-
-<script src="js/listdelinquency.js" type="text/javascript"></script>
-
+    <script>
+        $(document).ready(function () {
+            $('#sidebarCollapse').on('click', function () {
+                event.preventDefault();
+                jQuery.noConflict();
+                $('#sidebar').toggleClass('active');
+            });
+        });  
+    </script>
 
 
 
